Sections, buttons created and formatted.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <script src="./script.js"></script>
 </head>
 <body id="root">
-    
+
+    <section id="box1" class="box">
+        <button id="button1">Button 1</button>
+        <button id="button2">Button 2</button>
+    </section>
+    <section id="box2" class="box">
+        <button id="button3">Button 3</button>
+
+    </section>
+
 </body>
 </html>
